--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
     <script
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
-
-    <script type="module" crossorigin src="/virtual/assets/main-DVd4PBcT.js"></script>
-    <link rel="modulepreload" crossorigin href="/virtual/assets/modulepreload-polyfill-B5Qt9EMX.js">
-    <link rel="stylesheet" crossorigin href="/virtual/assets/main-CPuxy6T_.css">
+    ></script>
+    <script type="module" src="main.js" defer></script>
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body class="bg-slate-200">
     <header
