--- a/obudu/index.html
+++ b/obudu/index.html
@@ -18,12 +18,10 @@
     <script
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
+    ></script>
+    <link rel="stylesheet" href="../Modules/tour.css" />
+    <script src="obudu.js" type="module" defer></script>
     <!-- <script type="module" src="obudu-main.js" defer></script> -->
-    <script type="module" crossorigin src="/virtual/assets/obudu-CjKH1Xcb.js"></script>
-    <link rel="modulepreload" crossorigin href="/virtual/assets/modulepreload-polyfill-B5Qt9EMX.js">
-    <link rel="modulepreload" crossorigin href="/virtual/assets/handle-tour-Cd-KXwzy.js">
-    <link rel="stylesheet" crossorigin href="/virtual/assets/handle-tour-B5haUePX.css">
   </head>
   <body class="overflow-hidden text-xs md:text-base">
     <!-- Loader -->
