--- a/calabar/index.html
+++ b/calabar/index.html
@@ -32,7 +32,7 @@
         class="fixed right-3 top-3 z-[201] flex cursor-pointer flex-col font-semibold text-stone-500"
       >
         <small class="font-mono">Powered by</small>
-        <img src="logo.jpg" class="w-24 rounded-sm bg-white" alt="" />
+        <img src="../public/" class="w-24 rounded-sm bg-white" alt="" />
       </div>
 
       <div class="flex w-full flex-col items-center justify-center p-6">
