--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <p class="text-xl tracking-wider">VirtualTourNG</p>
         </a>
         <div
-          class="flex gap-1 flex-col mt-6 lg:grid lg:grid-cols-[1fr,2fr,1fr]"
+          class="flex gap-1 flex-col mt-6 lg:grid lg:grid-cols-[1fr,2fr,1fr] sm:w-[80%] mx-auto lg:w-full"
         >
           <a href="https://www.youtube.com/watch?v=Uksa_q12RQs">
             <img
@@ -130,7 +130,7 @@
               alt=""
             />
           </a>
-          <div class="grid grid-cols-2 gap-1">
+          <div class="grid grid-cols-2 gap-1 l">
             <a href="https://www.youtube.com/watch?v=o7Jr_X4PydI">
               <img src="VR Iyake Lake Ado-Awaye Virtual Tour NG.png" alt="" />
             </a>
